Add maintenance request fields, auto-create WO on submit, foreman dashboard

--- a/portal.hardrockdd.com-master/DB/DB.csproj
+++ b/portal.hardrockdd.com-master/DB/DB.csproj
@@ -1015,6 +1015,7 @@
     <Compile Include="Infrastructure\ViewPointDB\Data\Race.cs">
       <DependentUpon>VPdb.tt</DependentUpon>
     </Compile>
+    <Compile Include="Infrastructure\ViewPointDB\Data\SMCustomData.cs" />
     <Compile Include="Infrastructure\ViewPointDB\Data\SMRequest.cs">
       <DependentUpon>VPdb.tt</DependentUpon>
     </Compile>
