Add Work Performed documentation - mechanic completion form with repairs, parts, backorders

--- a/portal.hardrockdd.com-master/DB/DB.csproj
+++ b/portal.hardrockdd.com-master/DB/DB.csproj
@@ -654,6 +654,7 @@
     <Compile Include="Infrastructure\ViewPointDB\Data\EMWorkOrderStatusCode.cs">
       <DependentUpon>VPdb.tt</DependentUpon>
     </Compile>
+    <Compile Include="Infrastructure\ViewPointDB\Data\EMWorkPerformedData.cs" />
     <Compile Include="Infrastructure\ViewPointDB\Data\Equipment.cs">
       <DependentUpon>VPdb.tt</DependentUpon>
     </Compile>
