New maintenance portal UI design - Foreman, Mechanic, Cost Entry dashboards

--- a/portal.hardrockdd.com-master/DB/DB.csproj
+++ b/portal.hardrockdd.com-master/DB/DB.csproj
@@ -594,6 +594,7 @@
     <Compile Include="Infrastructure\ViewPointDB\Data\EMCostCodeType.cs">
       <DependentUpon>VPdb.tt</DependentUpon>
     </Compile>
+    <Compile Include="Infrastructure\ViewPointDB\Data\EMCostEntryData.cs" />
     <Compile Include="Infrastructure\ViewPointDB\Data\EMCostType.cs">
       <DependentUpon>VPdb.tt</DependentUpon>
     </Compile>
